<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Furqan</string>
    <string name="go">Go</string>
    <string name="search_hint">Search translations and notes</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_lastread">Last Read</string>
    <string name="action_recitation_cache">Download Recitation</string>
    <string name="send_to">Send to</string>
    <string name="action_sources">Manage Sources</string>
    <string name="sources_showhide">Show</string>
    <string name="sources_delete">Delete</string>
    <string name="title_section1">Surahs</string>
    <string name="title_section2">Notes</string>
    <string name="title_section3">Translations</string>
    <string name="action_translations">Translations</string>
    <string name="title_activity_verse_list">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">Furqan</string>
    <string name="filter_hint">type to filter</string>
    <string name="share">Share</string>
    <string name="picksurah">Pick a surah first..</string>
    <string name="writenote">Write a note..</string>
    <string name="surahno">Surah no</string>
    <string name="jumpto">Jump to..</string>
    <string name="language">Language</string>
    <string name="source">Source</string>
    <string name="verseno">Verse no</string>
    <string name="translationtitle">TranslationTitle</string>
    <string name="action_play">Play</string>
    <string name="stop">Stop</string>
    <string name="title_activity_recitation_cache">RecitationCacheActivity</string>
    <string name="title_activity_recitation_setting">RecitationSetting</string>

</resources>
