<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_goto"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/jumpto"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_lastread"
        android:icon="@drawable/ic_action_play"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_lastread"
        app:showAsAction="never" />
</menu>
